--- a/stylophile.com/thankyou.html
+++ b/stylophile.com/thankyou.html
@@ -56,7 +56,7 @@ font-family:  Verdana, Geneva, Tahoma, sans-serif;
     </div>
     <div class="h5"><h5>The Fashion city of the Nation</h5></div>
     <button>
-       <a href="home.html">Go To Home</a> 
+       <a href="index.html">Go To Home</a> 
     </button>
     </div>
 </body>
