--- a/stylophile.com/index.html
+++ b/stylophile.com/index.html
@@ -204,7 +204,7 @@ font-size: 40px;
 <div class="sidebar">
 <ul>
     <li><a>HOME |</a></li>
-    <li><a class="link" href="boys.html" target="_blank">MEN |</a></li>
+    <li><a>MEN |</a></li>
     <li>WOMEN |</li>
     <li>ABOUT US</li>
 </ul>
