--- a/stylophile.com/signup.html
+++ b/stylophile.com/signup.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>SIGN IN</title>
 </head>
 <body>
 
@@ -110,11 +110,11 @@
                 <div class="select-input">
                 <select>
                 <option value="ind">IND +91</option>
-                <option value="ind">IND +91</option>
-                <option value="ind">IND +91</option>
-                <option value="ind">IND +91</option>
-                <option value="ind">IND +91</option>
-                <option value="ind">IND +91</option>
+                <option value="ind">Aug +45</option>
+                <option value="ind">CH +22</option>
+                <option value="ind">AS +14</option>
+                <option value="ind">IN +15</option>
+                <option value="ind">PAZ +92</option>
                     
                 </select>
                 <input type="number" placeholder="Moblie number"></div>
