--- a/stylophile.com/signin.html
+++ b/stylophile.com/signin.html
@@ -79,7 +79,7 @@ input, button{
 
     <div class="footer">
     <p>By creating an account or logging in, you agree to Stylophil's <span>Conditions of Use</span> and <span>Privacy Policy</span></p>
-    <p> Already have an account? <a href="signin.html" target="_blank"> Sign in</a></p>
+    <p> Already have an account? <a href="signup.html" target="_blank"> Sign in</a></p>
     <p class="footer"> © 1996-2024, Stelophile.com, Inc. or its affiliates</p>
     </div>
 </form>
