--- a/stylophile.com/signin.html
+++ b/stylophile.com/signin.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>signin</title>
+    <title>Document</title>
 </head>
 <body>
     <style>
@@ -48,6 +48,8 @@ input, button{
            border:2px solid gray;
            width: 45vh;
            padding: 3vh;}
+
+
            button{
             background-color: rgba(255, 213, 0);
             border-radius: 0.5vh;
@@ -57,6 +59,9 @@ input, button{
            }
            span{
             color: rgba(0, 119, 255, 0.658);
+           }
+           button a{
+            text-decoration: none;
            }
        
     </style>
@@ -74,7 +79,7 @@ input, button{
         <h3>Create Account</h3>
         <p>Email or Mobile Number</p>
         <input type="text" placeholder="First and last name">
-        <button>CONTINUE</button>
+        <button><a class="text" href="thankyou.html">CONTINUE</a></button>
     </div>
 
     <div class="footer">
